fix(ui5-togglebutton): fix vertical center alignment in IE

--- a/packages/main/src/themes/ToggleButton.css
+++ b/packages/main/src/themes/ToggleButton.css
@@ -6,6 +6,18 @@ ui5-togglebutton:not([hidden]) {
 	display: inline-block;
 }
 
+:host(ui5-togglebutton) .sapMBtn::before {
+	content: ''; /* this is a hack for a bug in IE https:/* github.com/philipwalton/flexbugs/issues/231 */
+	min-height: inherit;
+	font-size: 0;
+}
+
+ui5-togglebutton .sapMBtn::before {
+	content: '';
+	min-height: inherit;
+	font-size: 0;
+}
+
 .sapMBtn.sapMToggleBtnPressed {
 	color: var(--sapUiToggleButtonPressedTextColor);
 	text-shadow: none;
